fixed button alignment bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,9 +93,12 @@ form button {
     color: black;
 }
 
+.buttonbar {
+    margin-left: 50%;
+}
+
 #red{
     background-color: red;
-    margin-left: 475px;
 }
 
 #blue{
@@ -190,5 +193,4 @@ a{
     padding: 14px;
     display: inline-block;
 }*/
-
 
